--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
             <label for="surname">Prénom:</label>
             <input type="text" id="surname" name="surname" required>
 
-            <label for="address">Adresse:</label>
-            <input type="text" id="address" name="address" required>
+            <label for="address">E-Mail:</label>
+            <input type="text" id="address" name="e-mail" required>
 
             <label>
                 <input type="checkbox" name="privacy" required> J'accepte la politique de confidentialité
