--- a/Vie_prive.html
+++ b/Vie_prive.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-    <header>
+    <header> <!--Navigation Menu-->
         <nav>
             <ul>
-                <li><a href="XXX_Fan_Site.html">Main Page</a></li>
-                <li><a href="Vie_prive.html">Vie Privé</a></li>
+                <li><a href="sezen_baris.html"><img src="images/sezen_baris_creme.png" alt="logo de Sezen&Baris" id="logo-header"></a></li>
+                <li><a href="sezen_baris.html" class="link-page">Accueil</a></li>
+                <li><a href="sezen_aksu.html" class="link-page">Sezen Aksu</a></li>
+                <li><a href="Baris_Manco_Site.html">Barış Manço</a></li>
+                <li><a href="Vie_prive.html">Vie Privée</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -20,7 +22,7 @@
     </header>
 
 
-<div>
+<div> <!--His private life-->
     <p style="display: inline-block; width: 60%; vertical-align: top;">
         Barış Manço, né le 2 janvier 1943 à Istanbul et mort le 1er février 1999 dans la même ville, est un auteur-compositeur-interprète ainsi qu'un explorateur, producteur et animateur de télévision turc.
         Ses compositions avoisinent les 200 chansons qui lui ont permis d'obtenir 12 disques d'or et un de platine. Certaines ont été diffusées ou traduites dans un grand nombre de langues dont en arabe, en bulgare, en néerlandais, en allemand, en français, en hébreu, en anglais, en japonais et en yougoslave.
@@ -32,6 +34,16 @@
 </div>
 
     <footer>
+        <nav>
+            <ul>
+                <li><a href="sezen_baris.html"><img src="images/sezen_baris_creme.png" alt="logo de Sezen&Baris" id="logo-header"></a></li>
+                <li><a href="sezen_baris.html" class="link-page">Accueil</a></li>
+                <li><a href="sezen_aksu.html" class="link-page">Sezen Aksu</a></li>
+                <li><a href="Baris_Manco_Site.html">Barış Manço</a></li>
+                <li><a href="Vie_prive.html">Vie Privée</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
         <p>&copy; 2024 - Tous droits réservés.</p>
     </footer>
 </body>
