--- a/contact.html
+++ b/contact.html
@@ -7,19 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-    <header>
+    <header> <!--Navigation Menu-->
         <nav>
             <ul>
-                <li><a href="XXX_Fan_Site.html">Main Page</a></li>
-                <li><a href="Vie_prive.html">Vie Privé</a></li>
+                <li><a href="sezen_baris.html"><img src="images/sezen_baris_creme.png" alt="logo de Sezen&Baris" id="logo-header"></a></li>
+                <li><a href="sezen_baris.html" class="link-page">Accueil</a></li>
+                <li><a href="Sezen Aksu.html" class="link-page">Sezen Aksu</a></li>
+                <li><a href="XXX_Fan_Site.html">Barış Manço</a></li>
+                <li><a href="Vie_prive.html">Vie Privée</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <h1 class="logo">Barış Manço</h1>
     </header>
 
-    <section class="contact-form">
+    <section class="contact-form"> <!--Form to communicate-->
         <h2>Contactez-nous</h2>
         <form action="#" method="post">
             <label for="civilite">Civilité:</label>
@@ -48,6 +50,18 @@
 
     
     <footer>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="sezen_baris.html"><img src="images/sezen_baris_creme.png" alt="logo de Sezen&Baris" id="logo-header"></a></li>
+                    <li><a href="sezen_baris.html" class="link-page">Accueil</a></li>
+                    <li><a href="Sezen Aksu.html" class="link-page">Sezen Aksu</a></li>
+                    <li><a href="XXX_Fan_Site.html">Barış Manço</a></li>
+                    <li><a href="Vie_prive.html">Vie Privée</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
         <p>&copy; 2024 - Tous droits réservés.</p>
     </footer>
 </body>
