--- a/Baris_Manco_Site.html
+++ b/Baris_Manco_Site.html
@@ -23,7 +23,7 @@
 
    
     <section class="intro">
-        <p>Une des figures les plus aimées et respectées de la musique turque.</p>
+        <p>Une des figures les plus aimées et respectées de la musique turque...</p>
         
         <details>
             <summary>Read more...</summary>
